fix legend collapse issues

--- a/ret.css
+++ b/ret.css
@@ -18,7 +18,7 @@ tooltip:hover:after{background:#333;background:rgba(0,0,0,.8);border-radius:5px;
 .nearavg{color:#FF0}
 .nearend{color:#F00}
 td.pvp1,div.pvp1{color:#B20000}
-table.ret,table.sortable{margin-left:5%;border-collapse:collapse;width:60%;}
+table.ret,table.sortable{margin-left:5%;border-collapse:collapse;width:67%;}
 table tbody{border:1px solid #fff;border-collapse:separate;border-spacing:1px}
 table tbody td{text-align:center}
 table.ret tr:nth-child(even) {background: #00002D;}
@@ -38,7 +38,7 @@ img.gray {
 						filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
 						zoom: 1;
 }
-div.caption {font-size:85%;text-align:left;width:20%;vertical-align:middle;margin-right:12%;float:right;clear:both}
+div.caption {font-size:85%;text-align:left;width:20%;vertical-align:middle;margin-right:5%;float:right;clear:both}
 table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after {
 	    content: " \25B4\25BE"
 }
